@@ -24,7 +24,7 @@
 #define HAVE_CONFIG_H
 #endif
 #ifdef HAVE_CONFIG_H
-#include <config.h>
+#include <IL/config.h>
 #endif
 
 #include <string.h>
