@@ -17,6 +17,7 @@
 - Added more to the Fortran wrapper.
 - Fixed TIF loading/saving (#define LZW_SUPPORT not enabled in libtiff).
 - Changed MSVC++ to use MSVCRT libraries again.
+- Added IL_BLIT_BLEND to influence alpha blending in ilBlit/ilOverlayImage.
 
 1.7.3
 ---
